--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,12 +5,12 @@
   &-img {
   }
   &-p {
-    margin-bottom: 10px;
-    font-size: 14px;
+  }
+  &-span {
+  }
+  &-em {
   }
   &-strong {
-    font-weight: bold;
-    display: inline-block;
   }
   &-text {
   }
