--- a/src/tags/strong.wxml
+++ b/src/tags/strong.wxml
@@ -1,3 +1,3 @@
 <template name="html-strong" wx:if="content">
-  <view class="html-tag-strong">{{ content }}</view>
+  <view class="<%= prefix %>strong">{{ content }}</view>
 </template>
