--- a/src/templates/html_deepth_tmpl.wxml
+++ b/src/templates/html_deepth_tmpl.wxml
@@ -8,7 +8,7 @@
   </block>
   <block wx:if="{{ item.tagName &&  item.children.length > 0}}">
     <block wx:if="{{ item.tagName == 'a' }}">
-      <weapp-anchor attrs="{{ item.attrs }}">
+      <weapp-anchor attrs="{{ item.attrs }}" children="{{ item.children }}">
         <block wx:for="{{ item.children }}" wx:key="{{ index }}" wx:for-item="subItem">
           <template is="html<%= j %>" data="{{ item: subItem }}" />
         </block>
